# Prodagochi

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.py  xmake.lua
engine/: CMakeLists.txt
engine/include/engine/: asset_manager.h  common.h  frame_buffer.h  load_shader.h  mesh.h  model.h  renderer.h  shader.h  stbi_image.h  text_renderer.h  texture.h  timer.h  ui_element.h  ui_renderer.h
engine/src/: asset_manager.cpp  frame_buffer.cpp  mesh.cpp  model.cpp  renderer.cpp  shader.cpp  text_renderer.cpp  texture.cpp  timer.cpp  ui_element.cpp  ui_renderer.cpp
glfwpp/: CMakeLists.txt
prodagochi/: CMakeLists.txt  xmake.lua
prodagochi/assets/apps_info/: test.json
prodagochi/assets/figma_json/json/: 00.json  001.json  002.json  2Front1.json  2Front2.json  2Front3.json  Hammer.json  Rectangle 6.json  Repeat.json  Target.json
prodagochi/assets/models/: MushroomMeshPA.fbx  monkey.fbx
prodagochi/assets/shaders/: color.fragment  color.vertex  model.fragment  model.vertex  text.fragment  text.vertex  texture.fragment  texture.vertex
prodagochi/include/prodagochi/: app_description.h  figma_helper.h  native.h  prodgagochi.h  productivity_state.h
prodagochi/src/: figma_helper.cpp  main.cpp  prodgagochi.cpp  test.cpp
prodagochi/src/linux/: native.cpp
prodagochi/src/windows/: native.cpp
rest_server/: xmake.lua
